# image-jakdu

./: .gitignore  README.md  compose.yaml  pyproject.toml
.github/workflows/: release.yml
docs/: windows-setup.md
packaging/windows/: image-jakdu.nsi
scripts/: capture_gui_screenshot.py  run_smoke_qa.py
src/image_jakdu/: __init__.py  __main__.py  codex_help.py  detection.py  domain.py  extraction.py  image_bounds.py  intent.py  paths.py  pipeline.py  processor.py  quality.py  quality_metrics.py  splitters.py  writer.py
src/image_jakdu/gui/: __init__.py  codex_help_worker.py  intent_actions.py  job.py  job_controller.py  layout.py  main_window.py  request_builder.py  reset_state.py  selection.py  support.py  worker.py
tests/: test_codex_help.py  test_detection.py  test_docs_links.py  test_end_to_end_save.py  test_extraction.py  test_gui_state.py  test_gui_worker.py  test_intent_llm.py  test_issue_1_regression.py  test_job_schema.py  test_manual_qa_fixtures.py  test_ollama_compose_docs.py  test_paths_and_naming.py  test_quality.py  test_release_packaging.py  test_scaffold.py  test_splitters.py
