[project]
name = "image-jakdu"
version = "0.1.0"
description = "Windows-first Python GUI app for splitting saved images."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx2[http2,brotli,zstd]>=0.28.0",
  "Pillow>=10.4.0",
  "pydantic>=2.10.0",
  "typing-extensions>=4.12.0",
]

[project.optional-dependencies]
dev = [
  "basedpyright>=1.31.0",
  "PySide6>=6.8.0",
  "pytest>=8.0.0",
  "pytest-qt>=4.4.0",
  "pyright>=1.1.407",
  "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/image_jakdu"]

[tool.pytest.ini_options]
addopts = [
  "--strict-config",
  "--strict-markers",
]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812",
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D107",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D107", "PLR2004", "S101"]

[tool.basedpyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "all"
reportMissingTypeStubs = false
